[gd_scene load_steps=38 format=3 uid="uid://chqo1kqni1w3f"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1ilrl"]
[ext_resource type="Texture2D" uid="uid://cxhjrypgw48gj" path="res://assets/player/Idle-5frm.png" id="1_feg36"]
[ext_resource type="Texture2D" uid="uid://xqhykdcdn7u0" path="res://assets/player/Gun-Shoot-5frm.png" id="2_ap3m3"]
[ext_resource type="Texture2D" uid="uid://1jdaar0o02fg" path="res://assets/player/Death-4frm.png" id="3_s41xk"]
[ext_resource type="Texture2D" uid="uid://y5iklckueb5t" path="res://assets/player/Run-6frm.png" id="3_ypwgb"]
[ext_resource type="AudioStream" uid="uid://bwvqy6sbdumfa" path="res://assets/audio/walking.wav" id="6_0prxw"]
[ext_resource type="AudioStream" uid="uid://j2ipw4fdhtxw" path="res://assets/audio/levelup.wav" id="7_o3us6"]
[ext_resource type="AudioStream" uid="uid://b7p8snv3eqtnq" path="res://assets/audio/death.wav" id="8_m02fy"]
[ext_resource type="AudioStream" uid="uid://c345v0vncfvfy" path="res://assets/audio/hurt.wav" id="9_eqbq3"]
[ext_resource type="PackedScene" uid="uid://ytbysfrdexb3" path="res://scenes/weapons/sword.tscn" id="10_2otpe"]
[ext_resource type="Texture2D" uid="uid://nsx3607f570" path="res://assets/White Slash Wide/Icon17.png" id="11_rs5qu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4g8pa"]
atlas = ExtResource("2_ap3m3")
region = Rect2(0, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_upa50"]
atlas = ExtResource("2_ap3m3")
region = Rect2(244, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj7vv"]
atlas = ExtResource("2_ap3m3")
region = Rect2(488, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq1qx"]
atlas = ExtResource("2_ap3m3")
region = Rect2(732, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtsv1"]
atlas = ExtResource("2_ap3m3")
region = Rect2(976, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_acw55"]
atlas = ExtResource("3_s41xk")
region = Rect2(0, 0, 233, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_12aym"]
atlas = ExtResource("3_s41xk")
region = Rect2(233, 0, 233, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rdkx"]
atlas = ExtResource("3_s41xk")
region = Rect2(466, 0, 233, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi5qy"]
atlas = ExtResource("1_feg36")
region = Rect2(0, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnkcw"]
atlas = ExtResource("1_feg36")
region = Rect2(488, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v6kn"]
atlas = ExtResource("1_feg36")
region = Rect2(732, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7us6"]
atlas = ExtResource("1_feg36")
region = Rect2(244, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_yytjp"]
atlas = ExtResource("1_feg36")
region = Rect2(976, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_dffxu"]
atlas = ExtResource("3_ypwgb")
region = Rect2(0, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_68ud4"]
atlas = ExtResource("3_ypwgb")
region = Rect2(244, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm60b"]
atlas = ExtResource("3_ypwgb")
region = Rect2(488, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_66uf1"]
atlas = ExtResource("3_ypwgb")
region = Rect2(732, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2fwl"]
atlas = ExtResource("3_ypwgb")
region = Rect2(976, 0, 244, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfx3q"]
atlas = ExtResource("3_ypwgb")
region = Rect2(1220, 0, 244, 186)

[sub_resource type="SpriteFrames" id="SpriteFrames_lm8w4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g8pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upa50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj7vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq1qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtsv1")
}],
"loop": true,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acw55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12aym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rdkx")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi5qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnkcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v6kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7us6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yytjp")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dffxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68ud4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm60b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66uf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2fwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfx3q")
}],
"loop": true,
"name": &"moving",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_riwwm"]
radius = 24.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yenlp"]
radius = 200.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr02t"]
bg_color = Color(0.808889, 0, 0.180072, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n42a0"]
bg_color = Color(0.0234315, 0.728067, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vb08"]
radius = 25.7143
height = 128.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmm8n"]
bg_color = Color(0.899091, 0.467854, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 4
script = ExtResource("1_1ilrl")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.286, 0)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_lm8w4")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.803525
offset = Vector2(0, -30)

[node name="HitBox" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-2, -27)
shape = SubResource("CapsuleShape2D_riwwm")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(1, -25)
shape = SubResource("CircleShape2D_yenlp")
debug_color = Color(0.803383, 0.225595, 0.863094, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 99
offset_left = -46.6667
offset_top = -159.0
offset_right = 71.3333
offset_bottom = -132.0
scale = Vector2(0.8, 0.8)
theme_override_styles/background = SubResource("StyleBoxFlat_cr02t")
theme_override_styles/fill = SubResource("StyleBoxFlat_n42a0")
step = 0.5
show_percentage = false

[node name="DamageArea" type="Area2D" parent="." groups=["player"]]
collision_layer = 4
collision_mask = 28

[node name="HitBoxDamage" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -60)
shape = SubResource("CapsuleShape2D_3vb08")
debug_color = Color(0.616022, 0.536329, 0, 0.42)

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SwordTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="WalkingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0prxw")
bus = &"SFX"

[node name="LevelUpSound" type="AudioStreamPlayer" parent="."]
process_mode = 2
stream = ExtResource("7_o3us6")

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m02fy")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_eqbq3")

[node name="Sword" parent="." instance=ExtResource("10_2otpe")]
visible = false
position = Vector2(0, -52)

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
offset_left = -46.0
offset_top = 12.0
offset_right = 45.0
offset_bottom = 20.0
theme_override_styles/fill = SubResource("StyleBoxFlat_nmm8n")
step = 1.0
value = 100.0
show_percentage = false

[node name="InvulnerabilityIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-59, -148)
scale = Vector2(0.6875, 0.609375)
texture = ExtResource("11_rs5qu")

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SwordTimer" to="." method="_on_sword_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
